[package]
name = "proc_doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
docx-rs = "0.4.7"
docx-rust = "0.1.5"
pdf-canvas = "0.7.0"
pdf-extract = "0.7.2"
printpdf = "0.6.0"
quick-xml = "0.31.0"
quickxml_to_serde = "0.5.0"
serde-xml-rs = "0.6.0"
serde_json = "1.0.107"
slicestring = "0.3.2"
